latest with mum

--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -124,7 +124,7 @@ In this paper, we present an investigation of ways that PIM tools might be exten
 
 Second, we have carried out a structural analysis of data records from personal data sources to identify the most common kinds of problems likely to arise from integrating data from these multiple sources.  For this, we have examined data sources from six common domains: contacts, events, music, shopping, social networking and weather. We have discovered, in our analysis, that while terminological heterogeneity is the most common issue for unifying simpler data records (such as address book contacts and social network profiles), structural differences are exhibited among more complex schemas, such as online retailers' product catalogues.
 
-Third, we have developed DataPalette, an interface that enables serendipitous ``data mixing,'' eliminating the need for people to write bespoke code to effectively combine and compare heterogeneous data.  DataPalette facilitates basic integration of diverse, heterogeneous data sources using simple interface gestures.  A usability evaluation of DataPalette has revealed that most users are comfortable with its interactive integration mechanisms, and that it effectively improves people's ability to perform multifaceted decision-making tasks using multiple sources.
+Third, we have developed DataPalette, an interface that enables serendipitous ``data mixing,'' eliminating the need for people to write bespoke code to effectively combine and compare heterogeneous data.  DataPalette facilitates basic integration of diverse, heterogeneous data sources using simple interface gestures.  A usability evaluation of DataPalette has revealed that most users are comfortable with its interactive integration mechanisms, and that it effectively improves people's abilities to perform multi-faceted decision-making tasks using multiple sources.
 
 \section{Background}
 Our work has been informed by three fields of inquiry, comprising PIM, database integration, and end-user mashups and toolkits.  Our primary motivation stems from field studies in PIM, where the need for consolidating data has been observed. This is an area in which many challenges remain, however, specifically, in reconciling the differences that arise among representations when data is created by different people, at different times, and for different purposes. As described by Alon Halevy:
@@ -135,7 +135,7 @@ The problem stems from [the fact that] we are trying to integrate data systems t
 
 The benefits to the end-user in conquering data integration have been demonstrated in PIM prototype systems that employ integrative data models.  For example, the uniform query capabilities provided by SEMEX~\cite{semex} and SIS \cite{Dumais:2003:SIS:860435.860451}, show the speed, efficiency and re-findability gained when a user is able to quickly trace and cross-reference information about people, places and things mentioned throughout files, folders, e-mail, and other information repositories.  Similarly, Haystack \cite{haystack} demonstrates that, when a single, consolidated data model is used across applications, the results include increased efficiency, the elimination of information fragmentation, and reduced effort, with the user being able to view and re-use information easily in multiple task contexts. 
 
-Because of the multifaceted challenges of data integration, contrasting approaches have been investigated in different research communities. In the fields of database integration and the Semantic Web \cite{Shadbolt:2006:SWR:1155313.1155373}, for example, automatic, machine-learning approaches, at either the level of \emph{ontology/schema matching}~\cite{euzenat2004api,doan2003learning}, or \emph{instance matching}~\cite{suchanek2011paris,castano2006matching} have been pursued. In contrast, the end-user programming community has preferred user-driven approaches, in which the user orchestrates the process of reconciliation at various levels of specificity.  Systems that use this approach include ``mash-up makers'' (such as Mashmaker, \cite{intel_mashmaker}, Marmite \cite{Lin:2009:EPM:1502650.1502667}, and Vegemite \cite{Wong:2007:MMM:1240624.1240842}) and visual programming language environments such as Yahoo Pipes \cite{citeulike:8887891}.
+Because of the multi-faceted challenges of data integration, contrasting approaches have been investigated in different research communities. In the fields of database integration and the Semantic Web \cite{Shadbolt:2006:SWR:1155313.1155373}, for example, automatic, machine-learning approaches, at either the level of \emph{ontology/schema matching}~\cite{euzenat2004api,doan2003learning}, or \emph{instance matching}~\cite{suchanek2011paris,castano2006matching} have been pursued. In contrast, the end-user programming community has preferred user-driven approaches, in which the user orchestrates the process of reconciliation at various levels of specificity.  Systems that use this approach include ``mash-up makers'' (such as Mashmaker, \cite{intel_mashmaker}, Marmite \cite{Lin:2009:EPM:1502650.1502667}, and Vegemite \cite{Wong:2007:MMM:1240624.1240842}) and visual programming language environments such as Yahoo Pipes \cite{citeulike:8887891}.
 
 DataPalette's approach exhibits similarities with the user-driven methods just mentioned, in that the user performs data reconciliation using concrete instances as examples, but also avoids the need for any sort of programming.  Previous systems utilising this approach have included ``Cards, Relations and Templates'' \cite{Dontcheva:2007:RCS:1294211.1294224} and Potluck \cite{citeulike:3875264} both of which permit the user to reconcile instances from different schemas into a uniform representation using drag-and-drop gestures to specify relations among fields.  \emph{DataPalette} extends this approach to a data workbench environment which allows people to easily consolidate and compare instances by their properties.
 
@@ -196,15 +196,16 @@ The 8 participants, recruited informally via word of mouth, consisted of 7 males
 % mention # that were computer scientists here?
 
 %\subsubsection{Question 1: Heterogenous Data Tasks}
-All participants reported regular use of multiple websites to accomplish tasks, examples of which including: shopping (food, consumer electronics, hotels and flights), choosing restaurants, job-seeking, selecting a university, seeking recipes, and finding answers to technical problems.  When beginning a task, it was common for participants to use Google to discover several related websites, which would then be used in different ways depending on the task at hand. For shopping-oriented tasks, balancing price, quality and speed of delivery was the main aim.  For product reviews, single sources were not trusted due to possible bias and incomplete feature coverage.  
+All participants reported regular usage of multiple websites to accomplish tasks, examples of which included: shopping (food, consumer electronics, hotels and flights), choosing a restaurant, job-seeking, selecting a university, seeking a recipe, or finding answers to technical problems.  When initiating a task, it was common for participants to use Google to discover several related websites, which would then be explored in different ways, depending on the task at hand. For shopping-oriented tasks, a balance of price, quality of merchandise, and speed of delivery was sought.  For product reviews, single sources alone were not trusted due to possible biases, or incomplete coverage of products' desired features.  
 % Jim - Not sure if this is relevant. If it is, put it back in.
 % one participant said that video reviews of items were particularly helpful, as the aesthetics and scale of the item could be seen.
 % Social networks were identified to have different functions, such as different groups of people belong to each and share different types of opinions.  One participant said that they shared their outlook and gmail calendars, but only for work events and did not record social activities on them.
-To provide a full coverage of information, websites of different types were used, such as manufacturers websites for technical details, review aggregators for a range of opinions, and Google maps for location-based decisions.
+To benefit from the fullest coverage of information, many different websites of different types were consulted, such as manufacturers' websites for technical details, and review aggregates for a range of opinions.
 
 %\subsubsection{Question 2: Process Used to Organise a Large Social Event}
 
-Participants said they would organise a large social event by first conferring with friends about their ideas, preferences and recommendations.  They selected venues, locations, restaurants and activities through a number of sources: their own prior experience, friends' recommendations, searching Google maps, dedicated reviews sites (such as Yelp for restaurants), and through web search.  People stated that the cost, price and easy to get to locations were the most important factors when choosing a venue.  They considered how to get there and looked up train or bus times on the Web, or organised carpools.  
+In response to our question of how participants would plan a large social event, most stated they would first confer with friends to get their ideas, preferences and recommendations.  Then, they would select the venue, locations, restaurants and activities through a number of sources: their own prior experience, friends' recommendations, searching Google maps, and dedicated reviews sites (such as Yelp for restaurants).  The participants cited the cost and ease of accessing a location as the most important factors when choosing the venue. 
+% They considered how to get there and looked up train or bus times on the Web, or organised carpools.  
 %When organising an event, the weather was not that important because they did not trust the accuracy of predictions.  Also, friends' preferences in price and food choices were not seen as a priority; they would try to be inclusive but only if it meant small changes to the plan.  Choosing food and timings were often made on-the-fly, by either with the use of mobile applications or by walking past a location.
 
 % old:
@@ -219,7 +220,9 @@ Participants said they would organise a large social event by first conferring w
 
 \subsubsection{Summary of Findings}
 
-All users experienced using multiple web sites in order to complete a task, and felt that the lack of existing integration between sites hindered their ability to make informed choices. Participants felt that they did not include particular aspects of a decision because the process to investigate them would be too difficult or take too much time. 
+All of the participants used multiple web sites in order to complete their tasks, and all felt that the lack of existing integration between sites hindered their ability to make informed choices. Participants prioritised the sources they used by both the ease and immediacy of accessing them.  Conversely, sources that took much effort or time to investigate were often excluded.
+
+% details of their decision making process were excluded because participants felt it was too much effort to investigate them. % Participants felt that they did not include particular aspects of a decision because the process to investigate them would be too difficult or take too much time. 
 
 %People said that they would like a website that could support the evolution of an event, that allowed them to post drafts of an event.  They felt that organising an event should be a process that changes over time.  Three participants said that they would like a recommendation system for places to eat and activities.  Another strong requirement was that it had to be ubiquitous so that everyone could use it because they wanted a single place to communicate with their friends.  While Facebook was the most popular social networking site for organising events, half of the participants felt that it was not the best solution and would prefer a collaborative environment.
 
@@ -406,7 +409,7 @@ We recruited participants through adverts posted near the University campus and 
 \newpage
 \section{Results}
 
-We received 26 responses to our call for participants, from which we selected the first 20 (ten of which were female). Seven were non-students, comprised of university staff and alumni; the remainder were students, 8 studying computer science, and 5 studying other subjects.  Due to the large population of international students and staff at the University, we ended up getting a large number of non-native English speakers.  However, since all students and staff had passed requisite proficiency tests, we did not think this would substantially impact results.  On average, each study took 40 minutes to complete.  The information in Table \ref{tbl:data} summarises the captured metrics for each participant.
+We received 26 responses to our call, from which we selected the first 20 (ten of whom were female). Seven were non-students, comprised of university staff and alumni; the remainder were students, 8 studying computer science, and 5 studying other subjects.  Due to the large population of international students and staff at our university, we ended up with a large sample (12) of non-native English speakers; however, since all had passed requisite proficiency tests, we did not think this would substantially impact results.  On average, each study took 40 minutes to complete.  The information in Table \ref{tbl:data} summarises the captured metrics for each participant.
 
 \begin{table*}[htbp]
 \small
