--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -220,24 +220,24 @@ In response to our question of how participants would plan a large social event,
 
 \subsubsection{Summary of Findings}
 
-All of the participants used multiple web sites in order to complete their tasks, and all felt that the lack of existing integration between sites hindered their ability to make informed choices. Participants prioritised the sources they used by both the ease and immediacy of accessing them.  Conversely, sources that took much effort or time to investigate were often excluded.
+All of the participants used multiple web sites in order to complete their tasks, and all felt that the lack of existing integration between sites hindered their ability to make informed choices. Participants prioritised the sources they used by both the ease and immediacy of accessing them.  As a result, sources that took much effort or time to investigate were often excluded.
 
 % details of their decision making process were excluded because participants felt it was too much effort to investigate them. % Participants felt that they did not include particular aspects of a decision because the process to investigate them would be too difficult or take too much time. 
 
 %People said that they would like a website that could support the evolution of an event, that allowed them to post drafts of an event.  They felt that organising an event should be a process that changes over time.  Three participants said that they would like a recommendation system for places to eat and activities.  Another strong requirement was that it had to be ubiquitous so that everyone could use it because they wanted a single place to communicate with their friends.  While Facebook was the most popular social networking site for organising events, half of the participants felt that it was not the best solution and would prefer a collaborative environment.
 
 \subsection{PS.2 - Technical Challenges of Data Integration}
-Our analysis of structured data feeds started with identifying a set of candidate sources to examine.  We consulted the ProgrammableWeb API directory\footnote{ProgrammableWeb: \url{http://www.programmableweb.com/apis/directory}} list of most popular data feeds for this purpose.  To increase the variety of sources, we selected from 5 categories: social network services, retailers, online event calendars, music sites, and weather, selecting 2--5 sources from each, for a total of 20.  
+Our analysis of structured data feeds started with identifying a set of candidate sources to examine.  We consulted the ProgrammableWeb API directory\footnote{ProgrammableWeb: \url{http://www.programmableweb.com/apis/directory}} list of most popular data feeds for this purpose.  To examine the many varieties of personal data sources, we selected from 5 categories: social network services, retailers, online event calendars, music sites, and weather, selecting 2--5 sources from each, for a total of 20.  
 
-For each feed, 3--5 typical records of a particular type were obtained from each service's API or feed.  For social networking sites, user profiles were the type of record examined, while for retail sites, event tracking sites, music sites and weather sites, product information, event time/date info, song listing information, and weather forecasts were examined, respectively.
+For each source, 3--5 typical records of a particular type were obtained from each service's API or feed.  For social networking sites, user profiles were the type of record examined, while for retail sites, it was product information; for event tracking sites, we focused on event time/date information; for music sites, on song listing information; and for weather sites, forecast records were selected for our study.
 %Records were located either by first querying for popular key terms using each site's keyword query API (if available), or a ``top products'' query if available.  
-For each such data record, two complexity metrics were computed: the \emph{average width}, corresponding to the number of properties, and \emph{average depth}, corresponding to the number of nested structures, of each record.  The third metric measured degree of overlap among sources in each category.  This was done by first mapping \emph{equivalent properties} between schemas, which was done manually by creating alignment tables for all properties of data sources in each category.  Each row comprised a property of a record of one data source, and all its closest matching properties from the others.  We used both property names and attribute descriptions (in documentation, if available) to make matching decisions.
+For each such data record, two complexity metrics were computed: the \emph{average width}, corresponding to the number of properties, and the \emph{average depth}, corresponding to the number of nested structures.  In addition, a third metric measured degree of overlap among the sources in each category.  This was accomplished by first mapping \emph{equivalent properties} between schemas, performed manually by creating alignment tables for all properties of data sources in each category.  Each row comprised a property of a record of one data source, and all its closest matching properties from the others.  We used both property names and attribute descriptions (in documentation, if available) to determine which properties were semantically equivalent.
 
 %Determining the width required first finding the appropriate level for comparison; for example, for Amazon's retail product ``Item'' records, the sub-structure under the ``ItemAttributes'' property was used instead of the root-level record. The average depth was simply the mean depth to each leaf node from the chosen comparison level.
 % This step was done manually, with an effort to select most similar components for comparison.  
 % Depth was computed as the average number of levels from record root to leaves across all properties, and was measured, with width, to convey the overall size/complexity of each record.
 
-Once established, equivalent properties were examined firstly for naming inconsistencies.  Then, ignoring names, we examined whether the property's values were structurally compatible, defined as follows: if both values consisted of the same literal data type or had one or more equivalent subfields, they were considered compatible.  Finally, we examined incompatibilities not covered by naming or structural differences alone.  These \emph{modelling differences} arose from a variety of causes, including, but not limited to: measurement unit inconsistencies, measurement method (e.g., dew point vs relative humidity), differences in scale and granularity, and mismatches in what was being modelled (``offer'' versus ``listing'').\looseness=-1
+Once established, equivalent properties were examined, first, for naming inconsistencies.  Then, disregarding names, we examined whether the property's values were structurally compatible.  That is, if both values consisted of the same literal data type, or had one or more equivalent subfields, they were considered compatible.  Finally, we examined incompatibilities not covered by either naming or structural differences alone.  These \emph{modelling differences} arose from a variety of reasons, including, but not limited to, measurement unit inconsistencies, measurement method disagreements (e.g., dew point vs relative humidity), differences in scale and granularity, and mismatches in what was being modelled (``offer'' versus ``listing'').\looseness=-1
 
 \subsubsection{Results}
 While most of the data records were small and relatively simple, nearly one in each category was substantially larger and more complex. In particular, Amazon, Soundcloud, Twitter and Weather Underground were the most complex in each of their respective categories. Mapping equivalent properties among the instance records for each category revealed little overall overlap among records, except among the smallest records (which had few properties to begin with).  This finding suggests that consolidating such records would effectively substantially increase the amount of information held by each.  While some of these `unique records' were primarily for internal, service-specific use (such as service-specific IDs) others were useful properties that were simply absent in other sources' records.  For example, among the 4 music data providers examined, only Spotify listed the source album that featured a particular song.  Such omissions reveal that data APIs often reflect each provider's own specific needs, and that integrating information across multiple sources may often be necessary to create more complete and useful representations.
