--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -227,7 +227,7 @@ All of the participants used multiple web sites in order to complete their tasks
 %People said that they would like a website that could support the evolution of an event, that allowed them to post drafts of an event.  They felt that organising an event should be a process that changes over time.  Three participants said that they would like a recommendation system for places to eat and activities.  Another strong requirement was that it had to be ubiquitous so that everyone could use it because they wanted a single place to communicate with their friends.  While Facebook was the most popular social networking site for organising events, half of the participants felt that it was not the best solution and would prefer a collaborative environment.
 
 \subsection{PS.2 - Technical Challenges of Data Integration}
-Our analysis of structured data feeds started with identifying a set of candidate sources to examine.  We consulted the ProgrammableWeb API directory\footnote{ProgrammableWeb: \url{http://www.programmableweb.com/apis/directory}} list of most popular data feeds for this purpose.  To examine the many varieties of personal data sources, we selected from 5 categories: social network services, retailers, online event calendars, music sites, and weather, selecting 2--5 sources from each, for a total of 20.  
+For Pre-Study 2, our analysis of structured data feeds started with identifying a set of candidate sources to examine.  We consulted the ProgrammableWeb API directory\footnote{ProgrammableWeb: \url{http://www.programmableweb.com/apis/directory}} list of most popular data feeds for this purpose.  To examine the many varieties of personal data sources, we selected from 5 categories: social network services, retailers, online event calendars, music sites, and weather, selecting 2--5 sources from each, for a total of 20.  
 
 For each source, 3--5 typical records of a particular type were obtained from each service's API or feed.  For social networking sites, user profiles were the type of record examined, while for retail sites, it was product information; for event tracking sites, we focused on event time/date information; for music sites, on song listing information; and for weather sites, forecast records were selected for our study.
 %Records were located either by first querying for popular key terms using each site's keyword query API (if available), or a ``top products'' query if available.  
@@ -240,9 +240,9 @@ For each such data record, two complexity metrics were computed: the \emph{avera
 Once established, equivalent properties were examined, first, for naming inconsistencies.  Then, disregarding names, we examined whether the property's values were structurally compatible.  That is, if both values consisted of the same literal data type, or had one or more equivalent subfields, they were considered compatible.  Finally, we examined incompatibilities not covered by either naming or structural differences alone.  These \emph{modelling differences} arose from a variety of reasons, including, but not limited to, measurement unit inconsistencies, measurement method disagreements (e.g., dew point vs relative humidity), differences in scale and granularity, and mismatches in what was being modelled (``offer'' versus ``listing'').\looseness=-1
 
 \subsubsection{Results}
-While most of the data records were small and relatively simple, nearly one in each category was substantially larger and more complex. In particular, Amazon, Soundcloud, Twitter and Weather Underground were the most complex in each of their respective categories. Mapping equivalent properties among the instance records for each category revealed little overall overlap among records, except among the smallest records (which had few properties to begin with).  This finding suggests that consolidating such records would effectively substantially increase the amount of information held by each.  While some of these `unique records' were primarily for internal, service-specific use (such as service-specific IDs) others were useful properties that were simply absent in other sources' records.  For example, among the 4 music data providers examined, only Spotify listed the source album that featured a particular song.  Such omissions reveal that data APIs often reflect each provider's own specific needs, and that integrating information across multiple sources may often be necessary to create more complete and useful representations.
+While most of the data records examined in PS.2 were small and relatively simple, nearly one in each category was substantially larger and more complex. In particular, Amazon, Soundcloud, Twitter and Weather Underground were the most complex in each of their respective categories. Mapping equivalent properties among the instance records for each category revealed little overall overlap, except among the smallest records (which had few properties to begin with).  This finding suggests that consolidating such records would substantially increase the amount of information held by each.  Some of the unique properties were primarily for internal use (such as service-specific IDs).  Some, however, contained useful properties which were simply absent in alternate sources.  For example, among the 4 music data providers examined, only Spotify listed the source album that featured a particular song.  Such omissions revealed that data APIs often were reflective of each provider's own specific needs, necessitating the integration of information across multiple sources to create more complete and useful representations.
 
-The second finding is that equivalent properties were only rarely given the same name; thus, terminological (or naming) heterogeneity was prevalent across nearly all records observed.  Structural inconsistencies were rarer, with the most common case occuring where a record that represented a value as a simple literal was expanded out in another as an entire sub-structure.  This most commonly occurred for fields with common string serialisations, such as dates, prices, and intervals.  Meanwhile, examples of modelling differences were rarer than those of structural heterogeneity, with the few we found mostly being attributed to concepts on one site not mapping perfectly to those of another site, and differences in units of measurement.
+A second observation is that equivalent properties were only rarely given the same name; thus, terminological (or naming) heterogeneity was prevalent across nearly all records observed.  Structural inconsistencies were rarer, with the most common case occuring where a record that represented a value as a simple literal was expanded out in another as an entire sub-structure.  This most commonly occurred for fields with common string serialisations, such as dates, prices, and intervals.  Meanwhile, examples of modelling differences were rarer than those of structural heterogeneity, with the few we found mostly being attributed to concepts on one site not mapping perfectly to those of another site, and differences in units of measurement.
 % We also encountered two examples of records in which multiple data fields were nested as a single literal, textual ``description'' field.  This behaviour stems from the intended use of such records only by human readers, rather than in structured data applications.  
 
 To examine value consistency, we compared source schemas provided in the API and feed documentation of the data providers.  There was substantial terminological inconsistency among the values names for enumerated types, with exact matches occurring less than 10\% of examined value pairs.  There were also range omissions, corresponding to cases where values represented in one record were not represented as valid values for the equivalent property in the target schema.  A simple example of this was the ``gender'' property  on Facebook, which allowed only ``male'' and ``female'' values, while Google+ included a third option,``other''.  
