--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -242,12 +242,12 @@ Once established, equivalent properties were examined, first, for naming inconsi
 \subsubsection{Results}
 While most of the data records examined in PS.2 were small and relatively simple, nearly one in each category was substantially larger and more complex. In particular, Amazon, Soundcloud, Twitter and Weather Underground were the most complex in each of their respective categories. Mapping equivalent properties among the instance records for each category revealed little overall overlap, except among the smallest records (which had few properties to begin with).  This finding suggests that consolidating such records would substantially increase the amount of information held by each.  Some of the unique properties were primarily for internal use (such as service-specific IDs).  Some, however, contained useful properties which were simply absent in alternate sources.  For example, among the 4 music data providers examined, only Spotify listed the source album that featured a particular song.  Such omissions revealed that data APIs often were reflective of each provider's own specific needs, necessitating the integration of information across multiple sources to create more complete and useful representations.
 
-A second observation is that equivalent properties were only rarely given the same name; thus, terminological (or naming) heterogeneity was prevalent across nearly all records observed.  Structural inconsistencies were rarer, with the most common case occuring where a record that represented a value as a simple literal was expanded out in another as an entire sub-structure.  This most commonly occurred for fields with common string serialisations, such as dates, prices, and intervals.  Meanwhile, examples of modelling differences were rarer than those of structural heterogeneity, with the few we found mostly being attributed to concepts on one site not mapping perfectly to those of another site, and differences in units of measurement.
+A second observation in PS.2 was that equivalent properties were only rarely given the same name. Thus, terminological (or naming) heterogeneity was prevalent across nearly all records observed.  Structural inconsistencies were rarer, with the most common case occuring where a record that represented a value as a simple literal was expanded out in another as an entire sub-structure.  This most commonly occurred for fields with common string serialisations, such as dates, prices, and intervals.  Meanwhile, examples of modelling differences were even rarer than those of structural heterogeneity, with the few we found mostly being attributed to concepts from one source not mapping perfectly to those of another source, for example, due to differences in methods of measurement, or measurement units.
 % We also encountered two examples of records in which multiple data fields were nested as a single literal, textual ``description'' field.  This behaviour stems from the intended use of such records only by human readers, rather than in structured data applications.  
 
-To examine value consistency, we compared source schemas provided in the API and feed documentation of the data providers.  There was substantial terminological inconsistency among the values names for enumerated types, with exact matches occurring less than 10\% of examined value pairs.  There were also range omissions, corresponding to cases where values represented in one record were not represented as valid values for the equivalent property in the target schema.  A simple example of this was the ``gender'' property  on Facebook, which allowed only ``male'' and ``female'' values, while Google+ included a third option,``other''.  
+To examine value consistency, we compared source schemas provided in the API and feed documentation of the data providers.  There was substantial terminological inconsistency among the value names for enumerated types, with exact matches occurring less than 10\% of examined value pairs.  There were also range inconsistencies, corresponding to cases where values represented in one record were not represented as valid values in the range of the equivalent property in the target schema.  A simple example of this was the ``gender'' property  on Facebook, which allowed only ``male'' and ``female'' values, while Google+ included a third option,``other''.  
 
-In summary, while data records ranged in complexity, no source subsumed the rest; all contained unique properties.  Moreover, the most common types of heterogeneity exhibited were terminological and value-related, which occurred vastly more than structural or modeling issues.
+In summary, we found in our PS.2, that while data records ranged in complexity, no single source subsumed any others; all contained unique properties.  Moreover, the most common types of heterogeneity exhibited were terminological and value-related, which occurred vastly more than structural or modeling issues.
 
 %\section{Designing the DataPalette Interface}
 \section{DataPalette : An Interface for Data Mixing}
@@ -260,11 +260,13 @@ In summary, while data records ranged in complexity, no source subsumed the rest
 \end{center}
 \end{figure*}
 
-At a high level, the overall goal of DataPalette was to empower end-users to mix arbitrary structured data feeds on-the-fly while solving their particular information task(s) --- be them sense-making or decision-making related --- in order to more effectively accomplish these tasks.  Unlike Mashup makers, including Yahoo Pipes!, the goal was to facilitate such integration without a need for an explicit separate scraping, shaping,, mapping or integration step. 
+The primary goal of DataPalette was to empower end-users so that they are able to mix arbitrary, structured data feeds on-the-fly while solving particular information task(s) more effectively.  Unlike mashup makers, such as Yahoo Pipes!, the aim was to facilitate such integration without the need for a separate step involving programming, scraping, shaping, mapping or integration. 
 
 % Instead, DataPalette's approach is most directly inspired by ``lightweight'' visual, user-interactive data collection, consolidation and alignment tools such as Potluck \cite{citeulike:3875264} and Cards \cite{Dontcheva:2007:RCS:1294211.1294224}.
 
-The two pre-studies provided valuable insight towards this goal that allowed us to guide our design process. PS.1 confirmed the need for data integration by showing that people preferred to rely upon multiple sources of information for making important decisions, and identified the kinds of sources most commonly used.  PS.2, meanwhile, revealed that the most common kinds of heterogeneity across data feeds were of the terminological structural varieties. As these were the ``simpler'' kinds of heterogeneity, this gave us optimism that an interactional approach would be feasible.  In the following sections, we describe the design process we used to create the prototype of DataPalette, followed by a detailed description of the design of the prototype and justification.
+The two pre-studies above provided valuable insights towards this goal, which, in turn, informed our design process. PS.1 confirmed the need for data integration, by showing that people preferred to rely upon multiple sources of information for making important decisions, and identified the kinds of sources most commonly used.  PS.2, meanwhile, revealed that the most common kinds of heterogeneity across data sources were of the terminological or structural varieties. As these were the ``simpler'' kinds of heterogeneity, this gave us optimism that an interaction-based approach would be feasible.  
+
+In the following sections, we describe the design process of creating the prototype of DataPalette.  This is followed detailed descriptions of prototype with justifications grounded in the pre-studies.
 
 \subsection{Design Process}
 We followed a five-phase spiral model consisting of planning, designing, mocking-up, prototyping, and testing to derive the design of DataPalette.  This process was used because of the high degree of initial uncertainty associated with how we'd achieve effective data mixing by end-users. We approached this design challenge through alternative generation and elimination; alternatives were designed, drawn up and evaluated by colleagues (and in later iterations, non-expert potential users), who critiqued the alternatives. The ease with which designs could be prototyped in HTML5 with modern web frameworks allowed us to perform this develop-test-iterate rapidly through seven iterations of this process.
