Figure 1 full width

--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -252,7 +252,7 @@ In summary, we found in our PS.2, that while data records ranged in complexity, 
 %\section{Designing the DataPalette Interface}
 \section{DataPalette : An Interface for Data Mixing}
 
-\begin{figure*}[tbp]
+\begin{figure*}[thb]
 \begin{center}
 \includegraphics[width=18cm]{img/screenshot}
 \caption{DataPalette Workspace, a file manager-inspired Drag and Drop interface for structured data mixing. Collapsible displays of data sources are listed on the left, from which instances or entire sets of items can be dragged to form a window (group) on the workspace.}
